--- a/default.hbs
+++ b/default.hbs
@@ -89,7 +89,7 @@
         {{ghost_head}}
 
     </head>
-    <body class="{{body_class}}">
+    <body class="{{body_class}} theme-the-reporter">
         <div class="gh-viewport">
             {{! Website's Header }}
             {{>header}}
