--- a/error-404.hbs
+++ b/error-404.hbs
@@ -67,7 +67,7 @@
 
     </head>
     
-    <body class="{{body_class}}">
+    <body class="{{body_class}} theme-the-reporter">
         <div class="gh-viewport">
             <main class="gh-main gh-container gh-error-404-page">
                 <div class="gh-404-error">
