--- a/custom-subscribe.hbs
+++ b/custom-subscribe.hbs
@@ -63,7 +63,7 @@
 
     </head>
 
-<body class="{{body_class}}">
+<body class="{{body_class}} theme-the-reporter">
     <div class="gh-viewport">
         <main class="gh-sign-in-page gh-form-page">
             {{#if @site.cover_image}}
