move the style updates from header code injection file to a seperate css file that should serve as an override to the theme

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1178,6 +1178,10 @@ html,
     max-width: 100%;
 }
 
+/* Flipside theme overrides */
+/* ---------------------------------------------------------- */
+@import "fs-theme-overrides.css";
+
 @media (max-width: 1100px) {
     .gh-container {
         padding-left: 20px;
