--- a/custom-sign-in.hbs
+++ b/custom-sign-in.hbs
@@ -66,7 +66,7 @@
 <body class="{{body_class}} theme-the-reporter">
     <div class="gh-viewport">
         <main class="gh-sign-in-page gh-form-page">
-            {{#if @site.cover_image}}
+            {{!-- FS theme override - disabling site cover image as bg image on page {{#if @site.cover_image}}
              <picture>
                 <source srcset="{{img_url @site.cover_image size="3000" format="webp" }} 3000w, {{img_url @site.cover_image
                     size="1600" format="webp" }} 1600w, {{img_url @site.cover_image size="1200" format="webp" }} 1200w, {{img_url
@@ -79,7 +79,7 @@
                     @site.cover_image size="600" }} 600w, {{img_url @site.cover_image size="500" }} 500w" sizes="100vw"
                     src="{{img_url @site.cover_image size="3000"}}" alt="{{t "Site cover image"}}" loading="lazy">
             </picture>
-            {{/if}}
+            {{/if}} --}}
             <div class="gh-form-wrapper">
                 <form class="gh-form-page-form" data-members-form="signin" data-members-autoredirect="false" novalidate>
                     <a class="gh-form-site-logo{{#if @custom.dark_mode_logo}} has-DM-logo{{/if}}"
