added new donate button, remove subscription button from header, added subscription banner to layout, remove gh container top and bottom padding which sets back to org,

--- a/index.hbs
+++ b/index.hbs
@@ -12,7 +12,7 @@
 
     {{!-- BANNERS EXAMPLES --}}
     {{!-- {{>banners/banner-with-bg background-image="../assets/images/subscription4.png"}} --}}
-    {{!-- {{>banners/banner-default}}  --}}
+    {{>banners/banner-default}}
 
     {{!-- LAYOUTS EXAMPLES --}}
     {{!-- {{>layout/featured-type1 tagName='music' themeSection="black"}} --}}
