--- a/assets/css/fs-theme-overrides.css
+++ b/assets/css/fs-theme-overrides.css
@@ -3,11 +3,6 @@
   height: 80px;
 }
 
-.gh-container {
-  padding-top: 8px;
-  padding-bottom: 8px;
-}
-
 .gh-nav-list-item__button, .gh-sign-in-btn {
   font-size: 16px;
   text-transform: uppercase;
@@ -19,8 +14,73 @@ width: 28px;
 height: 28px;
 }
 
-.gh-header__options .gh-subscribe-button {
+.gh-header__options .gh-donate-button {
   font-size: 16px;
+}
+
+/* Donate buttojn */
+
+.gh-donate-button {
+  border-radius: var(--border-radius-buttons);
+
+  padding: 10px 14px;
+
+  color: #fff;
+  font-family: var(--font-family-button);
+  font-size: var(--font-size-button);
+  font-weight: var(--font-weight-button);
+  line-height: var(--line-height-button-2);
+
+  text-transform: var(--text-transform-button);
+
+  position: relative;
+  background-color: var(--ghost-accent-color);
+}
+
+.gh-donate-button span {
+  position: relative;
+  z-index: 5;
+}
+
+.gh-donate-button::after {
+  content: "";
+
+  border-radius: var(--border-radius-buttons);
+
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  border: 0;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: transparent;
+  transition: background-color 0.25s ease;
+  z-index: 0;
+}
+
+.gh-donate-button:hover::after {
+  background-color: rgba(0, 0, 0, 0.15);
+}
+
+.gh-donate-button--type-2 {
+  padding: 10px 14px;
+
+  background-color: var(--accent-color);
+
+  text-transform: var(--text-transform-button);
+
+  line-height: var(--line-height-button-2);
+}
+
+.gh-header--gray .gh-donate-button {
+  background-color: var(--accent-color);
+}
+
+.gh-header--black .gh-donate-button {
+  background-color: var(--accent-color);
 }
 
 .gh-card-image-wrapper .gh-card-image-wrapper-link--noImage-logo {
@@ -33,7 +93,7 @@ height: 28px;
   max-width:100%;
 }
 
- .gh-header-container img.gh-site-logo-img, 
+.gh-header-container img.gh-site-logo-img, 
 .gh-header-container img.gh-site-logo-img-dark-mode {
   height: 64px;
 }
